# folder-snapshoter

./: .env  Cargo.toml  LICENSE  README.md
src/: common.rs  db.rs  errors.rs  main.rs  snapshot.rs  user_interface.rs
src/commands/: exit.rs  mod.rs  navigation.rs  snapshot_creation.rs  snapshot_gallery.rs
src/commands/snapshot_gallery/: mod.rs  snapshot_comparison.rs
