[package]
name = "folder-snapshoter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-tarpaulin = "0.26.1"
tokio = "1.29.1"
serde = "1.0.171"
chrono = { version = "0.4", features = ["unstable-locales"] }
dotenv = "0.15.0"


[dependencies.mongodb]
version = "2.6.0"
default-features = false
features = ["async-std-runtime"]